# LightBikeShop-2.0

./: .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  dockerfile  main.py  pyproject.toml
backend/admin/: access_token.py  auth.py  views.py
backend/bot/: bot.py
backend/bot/handlers/callbacks/: order.py
backend/bot/handlers/commands/: start.py
backend/crud/: user.py
backend/db/: db.py  mixin.py
backend/db/models/: __init__.py  cart.py  cms.py  order.py  product.py  store.py  user.py
backend/middlewares/: auth.py
backend/migrations/: env.py
backend/routes/: auth.py  bot_rout.py  site.py
frontend/: dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/components/: Footer.svelte  Header.svelte  MobileNav.svelte
frontend/src/pages/: Cart.svelte  Faq.svelte  Home.svelte  Login.svelte  Profile.svelte  Wishlist.svelte
frontend/src/stores/: auth.js
frontend/src/styles/: footer.css  header.css  mobilenav.css
